--- a/src/index.css
+++ b/src/index.css
@@ -11,9 +11,26 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: #171821;
   color: white;
+  overflow: hidden;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background: transparent;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #5f5e65;
 }
