--- a/src/Components/Card/Card.module.css
+++ b/src/Components/Card/Card.module.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap");
 .card {
   background-color: #13151b;
   width: 33%;
@@ -9,7 +10,8 @@
   border-radius: 3%;
 }
 .card h1 {
-  font-size: 1.5rem;
+  font-size: 1.2rem;
+  font-family: "Source Sans Pro", sans-serif;
 }
 .tasks {
   height: 450px;
