--- a/src/Components/Header/User/User.module.css
+++ b/src/Components/Header/User/User.module.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap");
 .user {
   position: absolute;
   top: 0;
@@ -6,24 +7,31 @@
   margin: 2% 2% 2% 4%;
   display: flex;
   align-items: center;
+  font-family: "Source Sans Pro", sans-serif;
+  font-size: 1.1rem;
 }
 .user__dp > span {
-  display: block;
+  display: flex;
   width: 100px;
   width: 40px;
   height: 40px;
   border-radius: 50%;
   background-color: #fabb18;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.5rem;
 }
 .user__dp {
   text-align: center;
   align-items: center;
   width: 60px;
 }
+
 .user__icon {
   text-align: center;
   align-items: center;
   width: 60px;
+  font-size: 1.1rem;
 }
 .user__info {
   text-align: center;
