--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: #171821;
   color: white;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 code {
