add-note-dynamic

--- a/src/Components/Notes/CreateNote.module.css
+++ b/src/Components/Notes/CreateNote.module.css
@@ -24,6 +24,7 @@ form textarea {
   outline: none;
   margin: 2% auto;
   padding: 3% 0%;
+  font-size: 1.1rem;
   color: #fabb18;
   background-color: #191c24;
   border-radius: 500px;
