--- a/src/Components/Card/Task.module.css
+++ b/src/Components/Card/Task.module.css
@@ -1,7 +1,7 @@
 .task {
   text-align: left;
   background-color: #191c24;
-  padding: 8% 8% 12% 8%;
+  padding: 8% 8% 2% 8%;
   margin: 5% 3% 0% 3%;
   border-radius: 3%;
 }
@@ -10,4 +10,22 @@
 }
 .task h1 {
   font-size: 1.2rem;
+}
+.task .btn {
+  width: 100%;
+  text-align: end;
+}
+.task button {
+  font-size: 1.5rem;
+  background-color: #191c24;
+  border-radius: 50%;
+  border: none;
+  width: 50px;
+  height: 50px;
+  cursor: pointer;
+  margin: 4% 0 0 0;
+  position: relative;
+}
+button:hover {
+  color: #fabb18;
 }
