--- a/src/Components/Card/Task.module.css
+++ b/src/Components/Card/Task.module.css
@@ -1,7 +1,7 @@
 .task {
   text-align: left;
   background-color: #191c24;
-  padding: 8% 8% 2% 8%;
+  padding: 8% 5% 2% 8%;
   margin: 5% 3% 0% 3%;
   border-radius: 3%;
 }
@@ -26,6 +26,7 @@
   margin: 4% 0 0 0;
   position: relative;
 }
-button:hover {
+.task button:hover {
   color: #fabb18;
+  background-color: #191c24;
 }
